--- a/views/partials/login_status.hbs
+++ b/views/partials/login_status.hbs
@@ -1,1 +1,6 @@
+{{#if login}}
+<li><a href="/account">{{user.username}}</a></li>
+<li><a href="/logout">Log out</a></li>
+{{else}}
 <li><a href="/login">Sign in<span class="sr-only">(current)</span></a></li>
+{{/if}}
