I can add and delete notes!

--- a/views/partials/login_status.hbs
+++ b/views/partials/login_status.hbs
@@ -1,5 +1,5 @@
 {{#if login}}
-<li><a href="/account">{{user.username}}</a></li>
+<li><a href="/account">{{username}}</a></li>
 <li><a href="/logout">Log out</a></li>
 {{else}}
 <li><a href="/login">Sign in<span class="sr-only">(current)</span></a></li>
