Added a visible link to the register thing

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,4 +4,6 @@
 $('li#home').addClass('active')
 </script>
 
-<h1>Hello!</h1>
+<h1>A Basic Note tacking app</h1>
+
+<p>Create an account <a href="/register">here</a></p>
