--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,6 @@
 $('li#home').addClass('active')
 </script>
 
-<h1>A Basic Note tacking app</h1>
+<h1>A Very Simple Note taking app</h1>
 
 <p>Create an account <a href="/register">here</a></p>
