--- a/views/edit_note.hbs
+++ b/views/edit_note.hbs
@@ -1,15 +1,5 @@
 {{!default}}
 
-<script>
-function save() {
-  $('#new_note').get(0).submit()
-}
-
-function discard() {
-  window.location.href="/notes"
-}
-</script>
-
 <form id="new_note" action="/notes/{{note.id}}" method="post">
   <input type="text" class="form-control" placeholder="Title" name="title" value="{{note.title}}" />
   <textarea type="text" class="form-control" placeholder="Content"
@@ -18,3 +8,5 @@ function discard() {
 </form>
 <button type="button" class="btn btn-success" onclick="save()">Save</button>
 <button type="button" class="btn btn-danger" onclick="discard()">Discard</button>
+
+<script src="../js/note.js"></script>
