--- a/views/notes.hbs
+++ b/views/notes.hbs
@@ -1,12 +1,36 @@
 {{!default}}
 
-<script>
-
-</script>
-
 <button type="button" style="btn btn-default" onclick="location.href='/new'">Create New</button>
 <div class="list-group">
 {{#each notes}}
-  <a href="/notes/{{this.id}}" class="list-group-item">{{this.title}}</a>
+  <div class="note">
+    <a href="/notes/{{this.id}}" class="list-group-item">{{this.title}}</a>
+    <button class="note-delete">
+      <span aria-hidden="true"><span class="glyphicon glyphicon-trash"></span></span>
+      <span class="sr-only">Delete Note</span>
+    </button>
+  </div>
 {{/each}}
 </ul>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalTitle">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="deleteModalTitle">Delete Note</h4>
+      </div>
+      <div class="modal-body" id="deleteModalBody">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="ok-button" class="btn btn-danger" data-dismiss="modal">Delete</button>
+        <button type="button" id="cancel-button" class="btn btn-default">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{#section 'script'}}
+<script src="js/note.js"></script>
+{{/section}}
