--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,7 +13,7 @@ function submit() {
     </input>
   </div>
   <br />
-  <label for="username">Username</label>
+  <label for="password">Password</label>
   <div class="input-group">
     <input type="password" name="password" class="form-control" placeholder="Password" id="password">
     </input>
